# snurr

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: documentation.md
examples/: example.bpmn  simple.rs
src/: api.rs  bpmn.rs  diagram.rs  error.rs  handler.rs  lib.rs  model.rs  process.rs  reader.rs  scaffold.rs
src/diagram/: events.rs  reader.rs
src/diagram/reader/: builder.rs
src/process/: diagram.rs  engine.rs  handler.rs  parallel.rs  reader.rs  replay.rs  scaffold.rs  trace.rs
src/process/engine/: bpmn_queue.rs  execute_handler.rs  token_handler.rs  token_stack.rs  walker.rs
src/process/reader/: builder.rs
src/reader/: builder.rs
tests/: integration_test.rs
tests/files/: cancel_transaction.bpmn  conditional_sequence_flows.bpmn  error_handling.bpmn  event_gateway.bpmn  exclusive_gateway.bpmn  exclusive_gateway_merging_branching.bpmn  exclusive_gateway_with_gateway_converge.bpmn  exclusive_gateway_with_task_converge.bpmn  fork_explosion.bpmn  inclusive_gateway.bpmn  inclusive_gateway_no_output.bpmn  inclusive_gateway_not_all_joined.bpmn  inclusive_gateway_split_end.bpmn  inclusive_join_fork.bpmn  inclusive_unbalanced.bpmn  inclusive_unbalanced2.bpmn  inclusive_with_parallel.bpmn  intermediate_event.bpmn  multiple_boundaries_same_symbol.bpmn  one_task.bpmn  parallel_gateway_not_all_joined.bpmn  parallel_gateway_not_all_joined_inverse.bpmn  parallel_inclusive_join_fork.bpmn  parallel_join_fork.bpmn  parallel_multi.bpmn  parallel_one_in_and_out.bpmn  parallel_parallel_join_fork.bpmn  parallel_stalled_execution.bpmn  parallel_unbalanced.bpmn  parallel_unbalanced2.bpmn  parallell_gateway.bpmn  process_end_with_symbol.bpmn  process_multiple_startevent_none.bpmn  showcase.bpmn  single_flow.bpmn  startevent_not_first.bpmn  subprocess.bpmn  subprocess_error_message_end.bpmn  subprocess_external_link_fail.bpmn  subprocess_message_end.bpmn  (+8 more)
tests/not_supported/: inclusive_unbalanced.bpmn  join_and_fork.bpmn  parallel_unbalanced.bpmn
