[package]
name = "snurr"
version = "0.8.3"
edition = "2024"
authors = ["sajox"]
description = "Read BPMN 2.0 files and run the process flow"
repository = "https://github.com/sajox/snurr"
readme = "README.md"
license = "MIT"
keywords = ["BPMN", "process"]

include = ["Cargo.toml", "LICENSE", "/src", "/examples"]

[lib]
doctest = false

[lints.rust]
unsafe_code = "forbid"

[[example]]
name = "simple"

[dependencies]
quick-xml = "0.37"
log = "0.4"
thiserror = "2"
foldhash = { version = "0.1", optional = true }
rayon = { version = "1.10", optional = true }

[features]
default = ["hashbrown"]
trace = []
hashbrown = ["dep:foldhash"]
parallel = ["dep:rayon"]


[dev-dependencies]
pretty_env_logger = "0.5"
