[package]
name = "snurr"
version = "0.10.5-wip"
edition = "2024"
rust-version = "1.85"
authors = ["sajox"]
description = "Read BPMN 2.0 files and run the process flow"
repository = "https://github.com/sajox/snurr"
readme = "README.md"
license = "MIT"
keywords = ["BPMN", "process"]

include = ["Cargo.toml", "LICENSE", "/src", "/examples"]

[lib]
doctest = false

[lints.rust]
unsafe_code = "forbid"

[[example]]
name = "simple"

[dependencies]
quick-xml = "0.37"
log = "0.4"
thiserror = "2"
rayon = { version = "1.10", optional = true }

[features]
default = []
parallel = ["dep:rayon"]

[dev-dependencies]
pretty_env_logger = "0.5"
