[package]
name = "snurr"
version = "0.15.0-wip"
edition = "2024"
rust-version = "1.88"
authors = ["sajox"]
description = "Read BPMN 2.0 files and run the process flow"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sajox/snurr"
keywords = ["BPMN", "process"]

include = ["Cargo.toml", "LICENSE", "/src", "/examples", "/assets", "/docs"]

[lib]
doctest = false

[lints.rust]
unsafe_code = "forbid"

[[example]]
name = "simple"

[dependencies]
quick-xml = "0.40"
log = "0.4"
thiserror = "2"
rayon = { version = "1", optional = true }

[features]
default = []
parallel = ["dep:rayon"]

[dev-dependencies]
pretty_env_logger = "0.5"
